Fix footer content from creating horizontal scroll bar

--- a/LESS/home.less
+++ b/LESS/home.less
@@ -227,7 +227,8 @@ footer {
     background-color: @dark-bg;
     color: white;
     .container {
-        padding: 100px 0;
+        padding-top: 100px;
+        padding-bottom: 100px;
     }
     span {
         display: block;
